Add Chocolatey package support for ChatALL
* **chocolatey/chatall.nuspec**: Define package metadata and specify files to include in the package.
* **chocolatey/tools/chocolateyInstall.ps1**: Write a PowerShell script to install ChatALL by copying the executable to the Chocolatey bin directory.
* **package.json**: Add a script to create a Chocolatey package using `choco pack`.
* **.github/workflows/release.yml**: Add steps to create and publish a Chocolatey package during the release process.
* **README.md**: Add instructions for installing ChatALL via Chocolatey under the "Download / Install" section.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,3 +37,12 @@ jobs:
         run: |
           export PYTHON_PATH=`which python`
           npm run release
+
+      - name: Setup Chocolatey
+        uses: chocolatey/setup-chocolatey@v1
+
+      - name: Create Chocolatey package
+        run: npm run choco-pack
+
+      - name: Publish Chocolatey package
+        run: choco push chocolatey/chatall.nupkg --source https://push.chocolatey.org/ --api-key ${{ secrets.CHOCOLATEY_API_KEY }}
